<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/login_view"
                android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spid_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/spidlogo"
        android:adjustViewBounds="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:contentDescription="@string/SPiDLogo"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:width="280dp"
        android:hint="@string/email"
        android:id="@+id/username_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spid_logo"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="280dp"
        android:hint="@string/password"
        android:id="@+id/password_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/username_edit_text"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="280dp"
        android:text="@string/loginToSPiD"
        android:id="@+id/login_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/password_edit_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="280dp"
        android:text="@string/cancel"
        android:id="@+id/cancel_button"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/login_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terms_text"
        android:layout_centerHorizontal="true"
        android:text="@string/agreementTerms"
        android:adjustViewBounds="true"
        android:layout_below="@+id/cancel_button"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terms_link"
        android:layout_centerHorizontal="true"
        android:text="@string/termsOfUse"
        android:textStyle="bold"
        android:adjustViewBounds="true"
        android:layout_below="@+id/terms_text"/>

</RelativeLayout>