<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ffffff">

    <ImageView
        android:id="@+id/spid_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/spidlogo"
        android:adjustViewBounds="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:contentDescription="@string/SPiDLogo"/>

    <TextView
        android:id="@+id/user_text_view"
        android:text="@string/welcomeUnknownUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/spid_logo"
        android:textColor="#000000"
        android:textSize="16sp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/logout_button"
        android:text="@string/logout"
        android:singleLine="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/user_text_view"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:minHeight="40dp"
        android:maxHeight="40dp"/>
</RelativeLayout>