<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/login_view"
                android:background="#ffffff">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spid_logo"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/spidlogo"
        android:adjustViewBounds="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:contentDescription="@string/SPiDLogo"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/authButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/spid_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/terms_text"
        android:layout_centerHorizontal="true"
        android:text="@string/termsAgreement"
        android:textSize="14sp"
        android:adjustViewBounds="true"
        android:layout_below="@+id/authButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/terms_link"
        android:layout_centerHorizontal="true"
        android:text="@string/termsOfUse"
        android:textSize="14sp"
        android:textStyle="bold"
        android:adjustViewBounds="true"
        android:layout_below="@+id/terms_text"/>

</RelativeLayout>